# ai-slop-ffmpeg

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  test_pipeline.py
src/: __init__.py  effects.py  image_mapper.py  timestamp_parser.py  video_generator.py
