[project]
name = "salt-2-artstyle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "moviepy>=1.0.3",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "gradio>=4.0.0",
]

[tool.pyright]
extraPaths = ["."]

[tool.pylance]
extraPaths = ["."]
