[project]
name = "ai-video-maker"
version = "0.1.0"
description = "AI Image-to-Video Maker with Ken Burns & GPU Acceleration"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "moviepy>=2.0.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "gradio>=4.0.0",
    "opencv-python-headless>=4.8.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
]

[tool.pyright]
extraPaths = ["."]

[tool.pylance]
extraPaths = ["."]
